Update (JunYeong Ahn)R Statistics Assignment2.ipynb

--- a/(JunYeong Ahn)R Statistics Assignment2.ipynb
+++ b/(JunYeong Ahn)R Statistics Assignment2.ipynb
@@ -972,7 +972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike Logistic Regression, KNN does not tell us which predictors are important; we don't get a table of\n",
+    "Unlike Logistic Regression, KNN does not tell us numeric explanations on which predictors are important because it is non-parametic method; we don't get a table of\n",
     "coefficients as in summary(glm.fit). <br>\n",
     "So This part is also out of my current knowledge."
    ]
